@@ -18,7 +18,7 @@ It's recommended to start new projects with version 4 while old projects should 
 
 @subsection version4_3 Version 4.3
 
-- last version to support Windows XP and Mac OS X 10.6
+- last version to support Windows XP, Mac OS X 10.6 and non c++11 mode
 - support for creating a graphics path from a string
 - new Control : VSTGUI::CSegmentButton
 - add support for adding a custom view to the split view separator
@@ -62,7 +62,7 @@ Note: All current deprecated methods will be removed in the next version. So mak
 @subsection code_changes_4_2_to_4_3 VSTGUI 4.2 -> VSTGUI 4.3
 
 - CControlListener was renamed to IControlListener and moved into the VSTGUI namespace and its own header file. A typedef for CControlListener is available but marked as deprecated.
-- VSTGUI::CDrawContext::drawString (UTF8StringPtr string, const CRect& rect, const CHoriTxtAlign hAlign, bool antialias) does not set the clip to rect by itself anymore. If you call this method in your code, you need to set the clip yourself now.
+- the VSTGUI::CDrawContext::drawString methods don't set the clip to rect by itself anymore. If you call this method in your code, you need to set the clip yourself now.
 - the interfaces for VSTGUI::IController and VSTGUI::IViewCreator have changed and if you have inherited from them you need to change your implementations accordingly.
 - VSTGUI::CGradient can now be created without a VSTGUI::CDrawContext object
 - VSTGUI::CGradientView takes now a VSTGUI::CGradient. Setting the gradient colors and start offsets are removed.
