@@ -40,6 +40,7 @@
 #import "lib/platform/mac/quartzgraphicspath.cpp"
 #import "lib/platform/mac/macfileselector.mm"
 #import "lib/platform/mac/macstring.mm"
+#import "lib/platform/mac/mactimer.cpp"
 #import "lib/platform/mac/cfontmac.mm"
 #import "lib/platform/mac/caviewlayer.mm"
 #import "lib/platform/mac/macclipboard.mm"
